Added January event

--- a/slides/index.html
+++ b/slides/index.html
@@ -41,14 +41,23 @@
     <section class="resources">
       <h2>Videos</h2>
       <p style="font-size:16px;">Since early 2015 our meetups have been livestreamed and recorded. All of our past videos are available on
-        <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">YouTube</a>. We have also 
-        created our own <a href="https://www.youtube.com/channel/UCcxO21IfeOaQCLbZ_lWI0Lg"> Bleeding Edge Web 
+        <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">YouTube</a>. We have also
+        created our own <a href="https://www.youtube.com/channel/UCcxO21IfeOaQCLbZ_lWI0Lg"> Bleeding Edge Web
         channel</a> you can subscribe to for notifications of new videos.</p>
 
       <h2>Slides</h2>
 
       <p style="font-size:16px;">Most presentations include a "News from the Bleeding Edge" section that highlights a few current themes in web app
         development, in addition to a primary presentation (linked when available).</p>
+
+      <h3>2021</h3>
+
+      <h4>January (virtual)</h4>
+      <ul>
+        <li>React Query</li>
+        <li>Gridsome for Apps (Vue)</li>
+        <li><strong class="sponsor">Zoom Sponsor: <a href="https://glginsights.com/">GLG</a></strong></li>
+      </ul>
 
       <h3>2020</h3>
 
@@ -66,7 +75,7 @@
         <li><a href="https://slides.com/kmurgic/react-concurrent-mode/">React Concurrent Mode</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://www.moove-it.com/">Moove It</a></strong></li>
       </ul>
-      
+
       <h3>2019</h3>
 
       <h4>September &mdash; <a href="https://youtu.be/DSn3L1cOE7o?t=34">video</a></h4>
