Update Slack Invite
Heroku has dropped most free plans, so the invitation system no longer works. This is a direct link to invite users until there is a better solution.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p><span class="star">&#x272A;</span> <a href="http://www.meetup.com/bleeding-edge-web/">Join
         the meetup</a> to be notified about new events</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
-        href="https://edgeatx-invite.herokuapp.com">Join our Slack group</a> to engage with the community, or to
+        href="https://join.slack.com/t/edgeatx/shared_invite/zt-1onzae2c4-0JBegV3EvF5VV4R_MDQsUA">Join our Slack group</a> to engage with the community, or to
         participate in our live events remotely</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
         href="https://www.quora.com/q/buuusacnhyuytmxw?invite_code=V5VQar181le2YyjGG5j6">Join our Quora space</a> to engage with the global edge community, or
