--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <style>
     .star {
       color: #EF1F10;
+      font-size: 1.2em;
+      line-height: 1em;
     }
   </style>
 </head>
@@ -41,13 +43,12 @@
       <p><em><strong>About Us</strong></em></p>
       <p>We are an Austin meetup about all things web+mobile. We are language/framework agnostic, and we
         cover different topics each month, with a focus on front end technology.</p>
-      <p>We meet at the offices of <a href="https://company.auntbertha.com/" target="_blank">Aunt Bertha</a> (near Mopac and Anderson Lane) from 6-8 pm on the 4th Wednesday
-        of each month.</em></p></p>
+      <p>Find us on <a href="https://www.meetup.com/bleeding-edge-web/">meetup.com</a> for the latest schedule and location.</p>
       <p>Follow <a href="https://twitter.com/edgeatx">@edgeATX</a> for news and updates.</p>
-      <p>Created with 1s and 0s by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
+      <p>Created with 1s and 0s by <a href="https://www.linkedin.com/in/bmoeskau/">Brian</a>, <a
+              href="http://www.coreybutler.com/">Corey</a> &amp; <a
+              href="https://www.linkedin.com/in/tedpatrick/">Ted</a>.</p>
     </section>
-
-    <footer></footer>
   </div>
 
   <script src="javascripts/scale.fix.js"></script>
