--- a/slides/index.html
+++ b/slides/index.html
@@ -19,10 +19,11 @@
   }
   .sponsor {
     background: #fff8db;
-    padding: 2px 10px;
+    padding: 4px 10px;
     border-radius: 5px;
     font-weight: 600;
     color: #494949;
+    margin-left: -20px;
   }
   .sponsor a {
     font-weight: 600;
@@ -40,15 +41,26 @@
 
     <section class="resources">
       <h2>Videos</h2>
-      <p style="font-size:16px;">Since early 2015 our meetups have been livestreamed and recorded. All of our past videos are available on
-        <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">YouTube</a>. We have also
-        created our own <a href="https://www.youtube.com/channel/UCcxO21IfeOaQCLbZ_lWI0Lg"> Bleeding Edge Web
-        channel</a> you can subscribe to for notifications of new videos.</p>
+      <p style="font-size:.9em;">Between 2015 and 2020 our meetups were livestreamed and recorded.
+        Many of our past videos are available on
+        <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">YouTube</a>.
 
       <h2>Slides</h2>
 
-      <p style="font-size:16px;">Most presentations include a "News from the Bleeding Edge" section that highlights a few current themes in web app
-        development, in addition to a primary presentation (linked when available).</p>
+      <p style="font-size:.9em;">Most presentations include a "News from the Bleeding Edge"
+        section that highlights a few current themes in web app development, in addition
+        to a primary presentation (linked when available).</p>
+
+      <h3>2024</h3>
+      <h4>February</h4>
+      <ul>
+        <li>News from the Bleeding Edge</li>
+        <li>Modern Web Applications with HTMX</li>
+        <li><strong class="sponsor">Sponsor: <a href="https://www.expediagroup.com/">Expedia Group</a></strong></li>
+      </ul>
+
+      <h3>2022 &ndash; 2023</h3>
+      <p><em>Covid break...</em></p>
 
       <h3>2021</h3>
 
@@ -399,8 +411,6 @@
         </li>
       </ul>
     </section>
-
-    <footer></footer>
   </div>
 
   <script src="../javascripts/scale.fix.js"></script>
