--- a/speak.html
+++ b/speak.html
@@ -14,6 +14,14 @@
     .star {
       color: #EF1F10;
     }
+    .note {
+      font-size: .8em;
+      border: 1px solid #dddddd;
+      background: #f6f6f6;
+      padding: 10px 15px;
+      border-radius: 5px;
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
@@ -33,14 +41,14 @@
       <ol>
         <li>Welcome &amp; Announcements</li>
         <li>Bleeding Edge Web (~20 minutes)</li>
-        <li><b>Deep Dive/Primary Talk</b> (~40 minutes)</li>
+        <li><b>Deep Dive/Primary Talk</b> (~20-30 minutes)</li>
         <li><b>Lightning Talks</b> (1-2 talks, 5-10 mins each)</li>
         <li>Meetup formally ends by 9pm.</li>
       </ol>
 
       <p id="what"><em><strong>What to Talk About</strong></em></p>
-      <p style="font-size: 65%;">If you'd like to talk but don't think you can fill 30-40 minutes, try
-        a lightning talk (see below)!</p>
+      <p class="note">If you'd like to talk but don't think you can fill 30 minutes, consider
+        giving a lightning talk (see below)!</p>
       <p>We like to discuss all things web + mobile. We've had a number of talks about Node.js,
         HTML/JS/CSS, web servers, libraries &amp; frameworks, etc. We've also had talks about
         Google Glass, "Internet of things", etc. Bottom line: if you think it would interest
@@ -69,10 +77,7 @@
       <p id="speaker-guide"><em><strong>Speaker Guide</strong></em></p>
       <p>If you are ready to present at the meetup we have a <a href="./speaker-guide.html">handy speaker
         guide</a> that includes what we'll need from you and some tips that might help with your talk.</p>
-
-      <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
-    <footer></footer>
   </div>
 
   <script src="javascripts/scale.fix.js"></script>
