--- a/speaker-guide.html
+++ b/speaker-guide.html
@@ -61,23 +61,23 @@
       
       <p id="talk-duration"><em><strong>Preparing | Talk Duration</strong></em></p>
       <p>
-        We have the room from <b>7-9pm</b>. We always start off with our standing "News from the Bleeding Edge"
-        talk, which takes the first 20 minutes or so. The perfect duration for the main talk is typically about
-        <b>30-40 minutes</b>, which leaves some time afterward for questions and networking.
+        We typically have the room from <b>6:30-9pm</b>. We always start off with our standing "News from the Bleeding Edge"
+        talk, which takes the first 20 minutes or so. The perfect duration for the main talk is about
+        <b>20-30 minutes</b>. In fact, erring on the shorter side is usually better (TED talks are <a
+          href="https://storage.ted.com/tedx/manuals/tedx_speaker_guide.pdf">18 minutes</a>!),
+          and leaves more time afterward for questions and networking.
       </p>
       <p>
-        You should <b>arrive 15 minutes early (by 6:45pm)</b> to get set up and oriented with the room.
-        There are multiple monitors and an overhead microphone, as well as the video camera. For Mac users, you can
-        connect via Airplay. For Windows/Linux users, there are HDMI and VGA connection options.
+        You should plan on arriving <strong>15 minutes prior to the meetup start time</strong> to get
+        set up and oriented with the room. For Mac users, you can connect via Airplay. For Windows/Linux users,
+        there are HDMI and VGA connection options.
       </p>
       <p>
-        Check out some of our prior meetups on <a href="https://www.youtube.com/results?search_query=bleeding+edge+web" target="_blank">YouTube</a>
+        Check out some of our prior meetups on <a
+          href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web" target="_blank">YouTube</a>
         to get a good feel for how the events usually go.
       </p>
-      
-      <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
-    <footer></footer>
   </div>
 
   <script src="javascripts/scale.fix.js"></script>
