--- a/sponsorship.html
+++ b/sponsorship.html
@@ -35,14 +35,13 @@
       <p><strong>What you get:</strong></p>
       <ul>
         <li>Your name in front of every person who receives our invitation emails (4,200+ as of
-          January 2020, mostly technology workers in Austin)</li>
+          this writing, mostly technology workers in Austin)</li>
         <li>A mention on the meetup page as a sponsor</li>
         <li>A thank you slide and mention during the Bleeding Edge Web presentation</li>
         <li>A chance to speak to the group in person, if desired</li>
         <li>An opportunity to hand out stickers &amp; swag, sign people up, etc. We'll 
           even keep any leftover swag to hand out at future meetups.</li>
         <li>A permanent sponsor link on our <a href="/slides/">previous talks</a> page</li>
-        <li>A thank you tweet from <a href="https://twitter.com/edgeatx">@edgeatx</a></li>
       </ul>
       <p>This is a great opportunity to create some local awareness, find potential employees,
         give back to the community, and meet new people. And more importantly, you'll be 
@@ -56,10 +55,7 @@
       <p id="sponsor-guide"><em><strong>Sponsor Guide</strong></em></p>
       <p>If you are ready to sponsor the meetup we have a <a href="./sponsor-guide.html">handy sponsor
         guide</a> that includes what we'll need from you to get the sponsorship set up.</p>
-
-      <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
-    <footer></footer>
   </div>
 
   <script src="javascripts/scale.fix.js"></script>
