--- a/sponsor-guide.html
+++ b/sponsor-guide.html
@@ -42,7 +42,8 @@
           you after the meetup.</li>
         <li>A billing contact name and email that we will use to invoice you for the sponsorship
           fee. <strong>The fee is due at the time of the meetup</strong> (or anytime earlier).
-          The invoice will be sent from PayPal, and can be paid by credit card or PayPal.</li>
+          The invoice will be sent from PayPal, and can be paid by credit card or PayPal
+          (cash is also acceptable).</li>
       </ul>
 
       <p>We will include a sponsor slide with your logo in our standard presentation. If
@@ -51,12 +52,7 @@
 
       <p>Take a look at any of our recent <a href="http://www.meetup.com/bleeding-edge-web/">meetup
         announcements</a> for examples of other sponsor listings.</p>
-
-      <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a
-        href="http://www.coreybutler.com/">Corey</a></p>
-
     </section>
-    <footer></footer>
   </div>
 
   <script src="javascripts/scale.fix.js"></script>
