--- a/slides/index.html
+++ b/slides/index.html
@@ -54,7 +54,7 @@
       <h3>2024</h3>
       <h4>February</h4>
       <ul>
-        <li>News from the Bleeding Edge</li>
+        <li><a href="2024/02-feb/">News from the Bleeding Edge</a></li>
         <li>Modern Web Applications with HTMX</li>
         <li><strong class="sponsor">Sponsor: <a href="https://www.expediagroup.com/">Expedia Group</a></strong></li>
       </ul>
