Add HTMX project link

--- a/slides/index.html
+++ b/slides/index.html
@@ -55,7 +55,7 @@
       <h4>February</h4>
       <ul>
         <li><a href="2024/02-feb/">News from the Bleeding Edge</a></li>
-        <li>Modern Web Applications with HTMX</li>
+        <li><a href="https://github.com/tedpatrick/htmx-talk">Modern Web Applications with HTMX</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://www.expediagroup.com/">Expedia Group</a></strong></li>
       </ul>
 
