--- a/slides/index.html
+++ b/slides/index.html
@@ -41,9 +41,9 @@
 
     <section class="resources">
       <h2>Videos</h2>
-      <p style="font-size:.9em;">Between 2015 and 2020 our meetups were livestreamed and recorded.
-        Many of our past videos are available on
-        <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">YouTube</a>.
+      <p style="font-size:.9em;">Recordings are available on <a href="https://www.youtube.com/@BleedingEdgeWeb" target="_blank">YouTube</a>.
+        Between 2015 and 2020 our meetups were livestreamed and recorded by a third party. Many of our past videos are available on
+        <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">Austin Tech Live</a>.
 
       <h2>Slides</h2>
 
@@ -52,7 +52,7 @@
         to a primary presentation (linked when available).</p>
 
       <h3>2024</h3>
-      <h4>February</h4>
+      <h4>February &mdash; <a href="https://www.youtube.com/watch?v=0XCvYxn1M9M">video</a></h4>
       <ul>
         <li><a href="2024/02-feb/">News from the Bleeding Edge</a></li>
         <li><a href="https://github.com/tedpatrick/htmx-talk">Modern Web Applications with HTMX</a></li>
