--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <p><span class="star">&#x272A;</span> <a target="_blank"
         href="https://www.quora.com/q/buuusacnhyuytmxw?invite_code=V5VQar181le2YyjGG5j6">Join our Quora space</a> to engage with the global edge community, or
         for recaps of prior events.</p>
+      <p><span class="star">&#x272A;</span> <a target="_blank"
+        href="https://www.linkedin.com/groups/12204322/">Join our LinkedIn group</a> to engage with the professional edge community.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./speak.html">speaking</a> opportunities.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./sponsorship.html">sponsorship</a> opportunities.</p>
 
