Add live link, other small tweaks

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
       color: #EF1F10;
       font-size: 1.2em;
       line-height: 1em;
+      vertical-align: text-bottom;
+    }
+    .live {
+      vertical-align: middle;
+      width: 22px;
+      margin-bottom: 3px;
+    }
+    .about {
+      border-radius: 5px;
+      padding: 10px 20px;
+      background: #f2f2f2;
+      font-size: 0.7em;
+      color: #777777;
+      font-style: italic;
     }
   </style>
 </head>
@@ -28,25 +42,28 @@
 
     <section>
       <p><em><strong>A meetup for the discerning web app developer</strong></em></p>
+      <p><img src="images/live.svg" class="live" alt="live"> <a href="https://live.edgeatx.org/">Join a live meetup</a></p>
       <p><span class="star">&#x272A;</span> <a href="slides">View our presentations</a></p>
-      <p><span class="star">&#x272A;</span> <a href="http://www.meetup.com/bleeding-edge-web/">Join
-        the meetup</a> to be notified about new events</p>
+      <p><span class="star">&#x272A;</span> <a href="https://www.meetup.com/bleeding-edge-web/">Join
+        our meetup group</a> to be notified about new events and to RSVP.</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
-        href="https://join.slack.com/t/edgeatx/shared_invite/zt-1onzae2c4-0JBegV3EvF5VV4R_MDQsUA">Join our Slack group</a> to engage with the community, or to
-        participate in our live events remotely.</p>
+        href="https://join.slack.com/t/edgeatx/shared_invite/zt-1onzae2c4-0JBegV3EvF5VV4R_MDQsUA">Join our Slack group</a>
+        to engage with the community, or to participate in our live events remotely.</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
-        href="https://www.quora.com/q/buuusacnhyuytmxw?invite_code=V5VQar181le2YyjGG5j6">Join our Quora space</a> to engage with the global edge community, or
-        for recaps of prior events.</p>
+        href="https://www.quora.com/q/buuusacnhyuytmxw?invite_code=V5VQar181le2YyjGG5j6">Join our Quora space</a>
+        to engage with the global BEW community.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./speak.html">speaking</a> opportunities.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./sponsorship.html">sponsorship</a> opportunities.</p>
 
-      <p><em><strong>About Us</strong></em></p>
-      <p>We are an Austin meetup about all things web+mobile. We are language/framework agnostic, and we
+      <p><strong>About us</strong></p>
+      <p>We are an Austin, TX meetup about all things web+mobile. We are language/framework agnostic, and we
         cover different topics each month, with a focus on front end technology.</p>
-      <p>Find us on <a href="https://www.meetup.com/bleeding-edge-web/">meetup.com</a> for the latest schedule and location.</p>
-      <p>Follow <a href="https://twitter.com/edgeatx">@edgeATX</a> for news and updates.</p>
-      <p>Created with 1s and 0s by <a href="https://www.linkedin.com/in/bmoeskau/">Brian</a>, <a
-              href="http://www.coreybutler.com/">Corey</a> &amp; <a
+      <p>Find us on <a href="https://www.meetup.com/bleeding-edge-web/">meetup.com</a>
+        for the latest schedule and location. Follow <a href="https://twitter.com/edgeatx">@edgeATX</a>
+        for news and updates.
+      </p>
+      <p class="about">Created with 1s and 0s by <a href="https://www.linkedin.com/in/bmoeskau/">Brian</a>, <a
+              href="https://www.coreybutler.com/">Corey</a> &amp; <a
               href="https://www.linkedin.com/in/tedpatrick/">Ted</a>.</p>
     </section>
   </div>
