--- a/slides/index.html
+++ b/slides/index.html
@@ -17,6 +17,9 @@
     padding: 8px 12px;
     color: #ef1f10;
   }
+  .small-text {
+    font-size:.9em;
+  }
   .sponsor {
     background: #fff8db;
     padding: 4px 10px;
@@ -41,15 +44,23 @@
 
     <section class="resources">
       <h2>Videos</h2>
-      <p style="font-size:.9em;">Between 2015 and 2020 our meetups were livestreamed and recorded.
-        Many of our past videos are available on
+
+      <p class="small-text">
+        We often livestream our meetups as they are happening. If there's a meetup
+        currently in progress, join at <a href="https://live.edgeatx.org/">live.edgeatx.org</a>.
+      </p>
+
+      <p class="small-text">Between 2015 and 2020 our meetups were livestreamed and recorded
+        by Austin Tech Live. Many of our past videos are available on
         <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">YouTube</a>.
+      </p>
 
       <h2>Slides</h2>
 
-      <p style="font-size:.9em;">Most presentations include a "News from the Bleeding Edge"
+      <p class="small-text">Most presentations include a "News from the Bleeding Edge"
         section that highlights a few current themes in web app development, in addition
-        to a primary presentation (linked when available).</p>
+        to a primary presentation (linked when available).
+      </p>
 
       <h3>2024</h3>
       <h4>February</h4>
