--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
     <section>
       <p><em><strong>A meetup for the discerning web app developer</strong></em></p>
-      <p><img src="images/live.svg" class="live" alt="live"> <a href="https://live.edgeatx.org/">Join a live meetup</a></p>
+      <p><img src="images/live.svg" class="live" alt="live"> <a
+          href="https://live.edgeatx.org/" target="_blank">Join a live meetup</a></p>
       <p><span class="star">&#x272A;</span> <a href="slides">View our presentations</a></p>
       <p><span class="star">&#x272A;</span> <a href="https://www.meetup.com/bleeding-edge-web/">Join
         our meetup group</a> to be notified about new events and to RSVP.</p>
