--- a/slides/index.html
+++ b/slides/index.html
@@ -57,8 +57,8 @@
 
       <h2>Slides</h2>
 
-      <p class="small-text">Most presentations include a "News from the Bleeding Edge"
-        section that highlights a few current themes in web app development, in addition
+      <p class="small-text">Most meetups include a "News from the Bleeding Edge" intro
+        talk that highlights a few current themes in web app development, in addition
         to a primary presentation (linked when available).
       </p>
 
