Add YouTube link

--- a/slides/index.html
+++ b/slides/index.html
@@ -46,13 +46,14 @@
       <h2>Videos</h2>
 
       <p class="small-text">
-        We often livestream our meetups as they are happening. If there's a meetup
-        currently in progress, join at <a href="https://live.edgeatx.org/">live.edgeatx.org</a>.
+        We often livestream our meetups. If there's a meetup currently in progress,
+        join at <a href="https://live.edgeatx.org/">live.edgeatx.org</a>.
+        Recent recordings are available on our
+        <a href="https://www.youtube.com/@BleedingEdgeWeb" target="_blank">YouTube channel</a>.
       </p>
 
-      <p class="small-text">Between 2015 and 2020 our meetups were livestreamed and recorded
-        by Austin Tech Live. Many of our past videos are available on
-        <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">YouTube</a>.
+      <p class="small-text">Many of our meetup recordings from 2015&ndash;2020 are available
+        via <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web" target="_blank">Austin Tech Live</a>.
       </p>
 
       <h2>Slides</h2>
@@ -70,7 +71,7 @@
         <li><strong class="sponsor">Sponsor: <a href="https://www.expediagroup.com/">Expedia Group</a></strong></li>
       </ul>
 
-      <h3>2022 &ndash; 2023</h3>
+      <h3>2022&ndash;2023</h3>
       <p><em>Covid break...</em></p>
 
       <h3>2021</h3>
