Home page tweaks, cleanup

--- a/index.html
+++ b/index.html
@@ -11,27 +11,6 @@
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <style>
-    .star {
-      color: #EF1F10;
-      font-size: 1.2em;
-      line-height: 1em;
-      vertical-align: text-bottom;
-    }
-    .live {
-      vertical-align: middle;
-      width: 22px;
-      margin-bottom: 3px;
-    }
-    .about {
-      border-radius: 5px;
-      padding: 10px 20px;
-      background: #f2f2f2;
-      font-size: 0.7em;
-      color: #777777;
-      font-style: italic;
-    }
-  </style>
 </head>
 <body>
   <div class="wrapper">
@@ -42,9 +21,14 @@
 
     <section>
       <p><em><strong>A meetup for the discerning web app developer</strong></em></p>
+
+      <p class="callout">
+        We are always looking for <a href="./speak.html">speakers</a> and
+        <a href="./sponsorship.html">sponsors</a>.</p>
+      </p>
+
       <p><img src="images/live.svg" class="live" alt="live"> <a
           href="https://live.edgeatx.org/" target="_blank">Join a live meetup</a></p>
-      <p><span class="star">&#x272A;</span> <a href="slides">View our presentations</a></p>
       <p><span class="star">&#x272A;</span> <a href="https://www.meetup.com/bleeding-edge-web/">Join
         our meetup group</a> to be notified about new events and to RSVP.</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
@@ -55,8 +39,7 @@
         to engage with the global BEW community.</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
         href="https://www.linkedin.com/groups/12204322/">Join our LinkedIn group</a> to connect with the professional BEW community.</p>
-      <p><span class="star">&#x272A;</span> Learn about <a href="./speak.html">speaking</a> opportunities.</p>
-      <p><span class="star">&#x272A;</span> Learn about <a href="./sponsorship.html">sponsorship</a> opportunities.</p>
+      <p><span class="star">&#x272A;</span> <a href="slides">View past presentations</a></p>
 
       <p><strong>About us</strong></p>
       <p>We are an Austin, TX meetup about all things web+mobile. We are language/framework agnostic, and we
@@ -65,7 +48,7 @@
         for the latest schedule and location. Follow <a href="https://twitter.com/edgeatx">@edgeATX</a>
         for news and updates.
       </p>
-      <p class="about">Created with 1s and 0s by <a href="https://www.linkedin.com/in/bmoeskau/">Brian</a>, <a
+      <p class="footer">Created with 1s and 0s by <a href="https://www.linkedin.com/in/bmoeskau/">Brian</a>, <a
               href="https://www.coreybutler.com/">Corey</a> &amp; <a
               href="https://www.linkedin.com/in/tedpatrick/">Ted</a>.</p>
     </section>
