--- a/sponsorship.html
+++ b/sponsorship.html
@@ -10,11 +10,6 @@
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <style>
-    .star {
-      color: #EF1F10;
-    }
-  </style>
 </head>
 <body>
   <div class="wrapper">
@@ -29,9 +24,10 @@
 
       <p>To sponsor a meetup, or if you have any questions about sponsoring, please <a
         href="mailto:bleedingedgeatx@gmail.com?subject=Sponsorship%20Inquiry">email us</a>.
-      <p>Sponsorship is <strong>$350</strong>, which covers the cost of food and drinks (we typically feed 60+
-        attendees). We handle all of the ordering and delivery logistics. Remaining money, if any,
-        is used to offset the recurring costs of running the meetup (e.g. meetup.com fees, swag, etc).</p>
+      <p>We ask <strong>$300</strong> to sponsor a meetup session, which covers the cost
+        of food and drinks (we typically feed 50+ attendees). We handle all of the logistics.
+        Remaining money, if any, is used to offset the recurring costs of running the meetup
+        (e.g. website hosting, meetup.com fees, swag, etc).</p>
       <p><strong>What you get:</strong></p>
       <ul>
         <li>Your name in front of every person who receives our invitation emails (4,200+ as of
