Live page, March video link, various other tweaks

--- a/slides/index.html
+++ b/slides/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Bleeding Edge Web Meetup - Presentations</title>
+  <title>Bleeding Edge Web: Presentations</title>
   <link rel="stylesheet" href="../stylesheets/styles.css">
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -13,9 +13,10 @@
   <![endif]-->
   <style>
   h3 {
-    border-left: 5px solid #ef1f10;
-    padding: 8px 12px;
+    border-top: 1px solid #ef1f10;
+    padding: 10px 0;
     color: #ef1f10;
+    margin-top: 40px;
   }
   .small-text {
     font-size:.9em;
@@ -46,24 +47,30 @@
       <h2>Videos</h2>
 
       <p class="small-text">
-        We often livestream our meetups. If there's a meetup currently in progress,
-        join at <a href="https://live.edgeatx.org/">live.edgeatx.org</a>.
-        Recent recordings are available on our
+        We often livestream our meetups. Check out our <a href="../live/">live meetup page</a>
+        to join meetups in progress. Recent recordings are available on our
         <a href="https://www.youtube.com/@BleedingEdgeWeb" target="_blank">YouTube channel</a>.
       </p>
 
-      <p class="small-text">Many of our meetup recordings from 2015&ndash;2020 are available
+      <p class="small-text">Many of our meetup recordings from 2015&ndash;2020 are also available
         via <a href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web" target="_blank">Austin Tech Live</a>.
       </p>
 
       <h2>Slides</h2>
 
       <p class="small-text">Most meetups include a "News from the Bleeding Edge" intro
-        talk that highlights a few current themes in web app development, in addition
-        to a primary presentation (linked when available).
+        talk that highlights current themes in web app development, in addition
+        to a primary talk (linked when available).
       </p>
 
       <h3>2024</h3>
+      <h4>March &mdash; <a href="https://www.youtube.com/watch?v=4-fkYNv7qog">video</a></h4>
+      <ul>
+        <li><a href="2024/03-mar/">News from the Bleeding Edge</a></li>
+        <li>PyScript and the Magic of Python in the Browser</li>
+        <li><strong class="sponsor">Sponsor: <a href="https://teamtopia.com/">Team Topia</a></strong></li>
+      </ul>
+
       <h4>February &mdash; <a href="https://www.youtube.com/watch?v=0XCvYxn1M9M">video</a></h4>
       <ul>
         <li><a href="2024/02-feb/">News from the Bleeding Edge</a></li>
@@ -76,6 +83,9 @@
 
       <h3>2021</h3>
 
+      <h4>February&ndash;October</h4>
+      <p><em>Covid break...</em></p>
+
       <h4>January (virtual)</h4>
       <ul>
         <li>React Query</li>
@@ -84,6 +94,9 @@
       </ul>
 
       <h3>2020</h3>
+
+      <h4>March&ndash;October</h4>
+      <p><em>Covid break...</em></p>
 
       <h4>February</h4>
       <ul>
@@ -101,6 +114,9 @@
       </ul>
 
       <h3>2019</h3>
+
+      <h4>October&ndash;December</h4>
+      <p><em>Holiday break</em></p>
 
       <h4>September &mdash; <a href="https://youtu.be/DSn3L1cOE7o?t=34">video</a></h4>
       <ul>
@@ -176,9 +192,7 @@
       <h3>2018</h3>
 
       <h4>November / December</h4>
-      <ul>
-        <li><em>Holiday break</em></li>
-      </ul>
+      <p><em>Holiday break</em></p>
 
       <h4>October &mdash; <a href="https://www.youtube.com/watch?v=JAXU6MgKiik&t=710s">video</a></h4>
       <ul>
