--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Bleeding Edge Web Meetup - Austin, TX</title>
+  <title>Bleeding Edge Web: Home</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -27,8 +27,7 @@
         <a href="./sponsorship.html">sponsors</a>.</p>
       </p>
 
-      <p><img src="images/live.svg" class="live" alt="live"> <a
-          href="https://live.edgeatx.org/" target="_blank">Join a live meetup</a></p>
+      <p><img src="images/live.svg" class="live-icon-sm" alt="live"> <a href="live/">Join a live meetup</a></p>
       <p><span class="star">&#x272A;</span> <a href="https://www.meetup.com/bleeding-edge-web/">Join
         our meetup group</a> to be notified about new events and to RSVP.</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
