--- a/speak.html
+++ b/speak.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Bleeding Edge Web Meetup - Speaking Overview</title>
+  <title>Bleeding Edge Web: Speaking</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -37,8 +37,8 @@
       <p>Bleeding Edge Web events follow a consistent format:</p>
       <ol>
         <li>Welcome &amp; Announcements</li>
-        <li>Bleeding Edge Web (~20 minutes)</li>
-        <li><b>Deep Dive/Primary Talk</b> (~20-30 minutes)</li>
+        <li>Bleeding Edge Update (20 minutes)</li>
+        <li><b>Deep Dive/Primary Talk</b> (~30 minutes)</li>
         <li><b>Lightning Talks</b> (1-2 talks, 5-10 mins each)</li>
         <li>Meetup formally ends by 9pm.</li>
       </ol>
@@ -48,8 +48,8 @@
         giving a lightning talk (see below)!</p>
       <p>We like to discuss all things web + mobile. We've had a number of talks about Node.js,
         HTML/JS/CSS, web servers, libraries &amp; frameworks, etc. We've also had talks about
-        Google Glass, "Internet of things", etc. Bottom line: if you think it would interest
-        other web app developer types, it's likely a good fit.
+        Google Glass, "Internet of things", etc. Bottom line: <strong>if you think it would
+          interest other web app developer types, it's likely a good fit</strong>.
       <p>Our members are generally interested in web technology, but fall into a wide spectrum.
         Many are entrepreneurs, job seekers, employers, developers, students, and tinkerers. Lots of
         people means lots of interesting subjects.</p>
