--- a/index.html
+++ b/index.html
@@ -16,18 +16,27 @@
   <div class="wrapper">
     <header>
       <h1>Bleeding Edge Web</h1>
+      <p class="subhead">A meetup for the discerning web app developer</p>
       <img src="images/bleeding-edge.png" alt="Bleeding Edge Web">
     </header>
 
     <section>
-      <p><em><strong>A meetup for the discerning web app developer</strong></em></p>
-
+      <h3>Welcome</h3>
+      <p>
+        <img src="images/live.svg" class="live-icon-sm" alt="live">
+        <a href="live/">Join a live meetup</a>
+      </p>
+      <p>
+        <span class="star">&#x272A;</span>
+        <a href="slides">View past presentations</a>
+      </p>
       <p class="callout">
-        We are always looking for <a href="./speak.html">speakers</a> and
-        <a href="./sponsorship.html">sponsors</a>.</p>
+        Our group thrives on community participation.<br>
+        Please consider <a href="./speak.html">speaking</a> or
+        <a href="./sponsorship.html">sponsoring</a> an event!
       </p>
 
-      <p><img src="images/live.svg" class="live-icon-sm" alt="live"> <a href="live/">Join a live meetup</a></p>
+      <h3>Connect</h3>
       <p><span class="star">&#x272A;</span> <a href="https://www.meetup.com/bleeding-edge-web/">Join
         our meetup group</a> to be notified about new events and to RSVP.</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
@@ -38,9 +47,8 @@
         to engage with the global BEW community.</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
         href="https://www.linkedin.com/groups/12204322/">Join our LinkedIn group</a> to connect with the professional BEW community.</p>
-      <p><span class="star">&#x272A;</span> <a href="slides">View past presentations</a></p>
 
-      <p><strong>About us</strong></p>
+      <h3>About us</h3>
       <p>We are an Austin, TX meetup about all things web+mobile. We are language/framework agnostic, and we
         cover different topics each month, with a focus on front end technology.</p>
       <p>Find us on <a href="https://www.meetup.com/bleeding-edge-web/">meetup.com</a>
