--- a/slides/index.html
+++ b/slides/index.html
@@ -38,7 +38,8 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>Bleeding Edge Web</h1>
+      <h1><a href="/">Bleeding Edge Web</a></h1>
+      <p class="subhead">A meetup for the discerning web app developer</p>
       <img src="../images/bleeding-edge.png" alt="Bleeding Edge Web">
       <p><a href="../">&larr; Home</a></p>
     </header>
@@ -61,6 +62,12 @@
       <p class="small-text">Most meetups include a "News from the Bleeding Edge" intro
         talk that highlights current themes in web app development, in addition
         to a primary talk (linked when available).
+      </p>
+
+      <p class="callout">
+        Our group thrives on community participation.<br>
+        Please consider <a href="../speak.html">speaking</a> or
+        <a href="../sponsorship.html">sponsoring</a> an event!
       </p>
 
       <h3>2024</h3>
