--- a/speak.html
+++ b/speak.html
@@ -24,7 +24,8 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>Bleeding Edge Web</h1>
+      <h1><a href="/">Bleeding Edge Web</a></h1>
+      <p class="subhead">A meetup for the discerning web app developer</p>
       <img src="images/bleeding-edge.png" alt="Bleeding Edge Web">
       <p><a href="./">&larr; Home</a></p>
     </header>
@@ -38,10 +39,16 @@
       <ol>
         <li>Welcome &amp; Announcements</li>
         <li>Bleeding Edge Update (20 minutes)</li>
-        <li><b>Deep Dive/Primary Talk</b> (~30 minutes)</li>
         <li><b>Lightning Talks</b> (1-2 talks, 5-10 mins each)</li>
+        <li><b>Deep Dive/Primary Talk</b> (~30 minutes)</li>
         <li>Meetup formally ends by 9pm.</li>
       </ol>
+
+      <p id="speaker-guide"><em><strong>Speaker Guide</strong></em></p>
+      <p>If you are ready to present at the meetup, we have a <a href="./speaker-guide.html">handy speaker
+        guide</a> that includes what we'll need from you and some tips that might help with your talk.
+        Still considering it? Read on.
+      </p>
 
       <p id="what"><em><strong>What to Talk About</strong></em></p>
       <p class="note">If you'd like to talk but don't think you can fill 30 minutes, consider
@@ -50,10 +57,7 @@
         HTML/JS/CSS, web servers, libraries &amp; frameworks, etc. We've also had talks about
         Google Glass, "Internet of things", etc. Bottom line: <strong>if you think it would
           interest other web app developer types, it's likely a good fit</strong>.
-      <p>Our members are generally interested in web technology, but fall into a wide spectrum.
-        Many are entrepreneurs, job seekers, employers, developers, students, and tinkerers. Lots of
-        people means lots of interesting subjects.</p>
-      <p>If you run a tech meetup organized around a specific technology you might be a good candidate
+      <p>If you are part of a meetup organized around a specific technology you might be a good candidate
         for speaking to our group. Overview talks about languages and franeworks generally make for
         perfect topics for our members who might not otherwise attend a meetup specific to them.</p>
 
@@ -70,10 +74,6 @@
       <p>Lightning talks in the past have covered things like Vue.js, RiotJS, functional programming,
       mobile apps, CSS Pointer Events, Node.js utilities, developer services, personal project,
       hackathons, etc.</p>
-
-      <p id="speaker-guide"><em><strong>Speaker Guide</strong></em></p>
-      <p>If you are ready to present at the meetup we have a <a href="./speaker-guide.html">handy speaker
-        guide</a> that includes what we'll need from you and some tips that might help with your talk.</p>
     </section>
   </div>
 
