--- a/speaker-guide.html
+++ b/speaker-guide.html
@@ -14,7 +14,8 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>Bleeding Edge Web</h1>
+      <h1><a href="/">Bleeding Edge Web</a></h1>
+      <p class="subhead">A meetup for the discerning web app developer</p>
       <img src="images/bleeding-edge.png" alt="Bleeding Edge Web">
       <p><a href="./">&larr; Home</a></p>
     </header>
@@ -58,14 +59,14 @@
       <p>
         We typically have the room from <b>6:30-9pm</b>. We always start off with our standing "News from the Bleeding Edge"
         talk, which takes the first 20 minutes or so. The perfect duration for the main talk is about
-        <b>20-30 minutes</b>. In fact, erring on the shorter side is usually better (TED talks are <a
+        <b>30 minutes</b>. In fact, erring on the shorter side is usually better (TED talks are <a
           href="https://storage.ted.com/tedx/manuals/tedx_speaker_guide.pdf">18 minutes</a>!),
           and leaves more time afterward for questions and networking.
       </p>
       <p>
         You should plan on arriving <strong>15 minutes prior to the meetup start time</strong> to get
-        set up and oriented with the room. For Mac users, you can connect via Airplay. For Windows/Linux users,
-        there are HDMI and VGA connection options.
+        set up and oriented with the room. We present and record via Zoom, so you'll want time to connect
+        to wifi and make sure you can get into Zoom.
       </p>
       <p>
         Check out some of our prior meetups on <a
