--- a/sponsor-guide.html
+++ b/sponsor-guide.html
@@ -14,7 +14,8 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>Bleeding Edge Web</h1>
+      <h1><a href="/">Bleeding Edge Web</a></h1>
+      <p class="subhead">A meetup for the discerning web app developer</p>
       <img src="images/bleeding-edge.png" alt="Bleeding Edge Web">
       <p><a href="./">&larr; Home</a></p>
     </header>
