Add PyScript talk link

--- a/slides/index.html
+++ b/slides/index.html
@@ -74,7 +74,8 @@
       <h4>March &mdash; <a href="https://www.youtube.com/watch?v=4-fkYNv7qog">video</a></h4>
       <ul>
         <li><a href="2024/03-mar/">News from the Bleeding Edge</a></li>
-        <li>PyScript and the Magic of Python in the Browser</li>
+        <li><a href="https://fpliger.pyscriptapps.com/talks-bleeding-edge-web-2024/latest/">PyScript
+          and the Magic of Python in the Browser</a></li>
         <li><strong class="sponsor">Sponsor: <a href="https://teamtopia.com/">Team Topia</a></strong></li>
       </ul>
 
