Add tagline to the live page

--- a/live/index.html
+++ b/live/index.html
@@ -19,6 +19,7 @@
 <div class="wrapper">
   <header>
     <h1>Bleeding Edge Web</h1>
+    <p class="subhead">A meetup for the discerning web app developer</p>
     <img src="../images/bleeding-edge.png" alt="Bleeding Edge Web">
     <p><a href="../">&larr; Home</a></p>
   </header>
